--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSou
 # DATA SOURCE
 #===============================
 #Set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/forum 
+spring.datasource.url=jdbc:postgresql://localhost:5432/intro_db 
 spring.datasource.username=postgres 
 spring.datasource.password=root 
 spring.datasource.driver-class-name=org.postgresql.Driver
