--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>6.0.1.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.10.14</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
