Deploy app to Heroku

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,22 +1,41 @@
-version: '3.1'
+version: '3.5'
 
 services:
-
-  db:
-    image: postgres
-    restart: "no"
+  postgres:
+    container_name: postgres_container
+    image: postgres:latest
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: root
+      PGDATA: /data/postgres
+    volumes:
+      - postgres:/data/postgres
     ports:
       - "5432:5432"
-    volumes:
-      - /var/lib/docker/volumes/postgresql/_data:/var/lib/postgresql/data
+    networks:
+      - postgres
+    restart: unless-stopped
 
-  adminer:
-    image: adminer
-    restart: "no"
-    ports:
-      - "8081:8080"
+  pgadmin:
+    container_name: pgadmin_container
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: pgadmin4@pgadmin.org
+      PGADMIN_DEFAULT_PASSWORD: pgadmin4
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
-      - /var/lib/docker/volumes/adminer/_data:/var/lib/adminer/data
+      - pgadmin:/var/lib/pgadmin
+
+    ports:
+      - "15432:80"
+    networks:
+      - postgres
+    restart: unless-stopped
+
+networks:
+  postgres:
+    driver: bridge
+
+volumes:
+  postgres:
+  pgadmin:
